@@ -41,3 +41,5 @@
 2014-06-30 Fred Gleason <fredg@paravelsystems.com>
 	* Removed clock code from 'common/lwrp_server.cpp' and
 	'common/lwrp_server.h'.
+2014-06-30 Fred Gleason <fredg@paravelsystems.com>
+	* Implemented the 'IP' command in 'common/lwrp_server.cpp'.
